# practice-opencv

./: .gitignore  CMakeLists.txt  README.md  contoursCVTest.cpp  edgeDetection.cpp  floorMapper.cpp  hsvThreshold.cpp  imageChange.cpp  liveEdgeDetection.cpp  objectDetection.cpp  openCVTest.cpp
