cmake_minimum_required(VERSION 3.1)
project(OpenCVTest)
# Enable C++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
find_package(OpenCV REQUIRED)
add_executable(OpenCVTest openCVTest.cpp)
add_executable(ContoursCVTest contoursCVTest.cpp)
add_executable(FloorMapper floorMapper.cpp)
add_executable(HSVThreshold hsvThreshold.cpp)
target_link_libraries(OpenCVTest ${OpenCV_LIBS})
target_link_libraries(ContoursCVTest ${OpenCV_LIBS})
target_link_libraries(FloorMapper ${OpenCV_LIBS})
target_link_libraries(HSVThreshold ${OpenCV_LIBS})

